# Breakpoint

./: package-lock.json  package.json
breakpoint/: README.md  pyproject.toml  report_fixed_all.json  server.py
breakpoint/breakpoint/: __init__.py  agents.py  blueprint.py  evolution.py  llm.py  models.py  prompts.py  report.py  run.py
frontend/: package.json
frontend/src/lib/db/models/: Conversation.js
frontend/src/lib/prompts/intake/: followUp.js
frontend/src/lib/services/: conversation.js  simulationEngine.js
src/app/: page.js
src/app/(auth)/login/: page.js
src/app/api/auth/login/: route.js
src/app/api/auth/register/: route.js
src/app/projects/: page.js
src/app/projects/[id]/: page.js
src/app/projects/[id]/intake/codebase/: page.js
src/app/projects/[id]/intake/conversation/: page.js
src/app/projects/new/: page.js
src/components/layout/: Sidebar.js
src/lib/db/: connect.js
src/lib/middleware/: auth.js
src/lib/prompts/intake/: decomposition.js  openingPrompt.js
src/lib/services/: codebaseAnalyzer.js
