[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "breakpoint-engine"
version = "0.1.0"
description = "Evolutionary adversarial-user simulation engine"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["breakpoint*"]

# Run `pip install -e .` once so VS Code (Pylance) resolves all imports.

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
include = ["breakpoint"]

[tool.ruff]
line-length = 100
